# Purrify

./: .gitignore  README.md  meson.build
.github/: FUNDING.yml
data/: io.github.alessandro_mattos.Purrify.desktop.in  io.github.alessandro_mattos.Purrify.metainfo.xml.in  io.github.alessandro_mattos.purrify.desktop.in  io.github.alessandro_mattos.purrify.metainfo.xml.in  meson.build
flatpak/: io.github.alessandro_mattos.Purrify.yml  io.github.alessandro_mattos.purrify.yml
po/: LINGUAS  POTFILES  de.po  en_US.po  es.po  fr.po  pt_BR.po  purrify.pot  ru.po
scripts/: dev-run.sh
src/: Application.vala  Cleaner.vala  CleaningTarget.vala  FileUtils.vala  GroupSelectionBatch.vala  MainWindow.vala  Preferences.vala  ScanOptionGroups.vala  Scanner.vala  Stats.vala  meson.build
tests/: group-selection-batch.vala  meson.build  scan-option-groups.vala
